tests/compile-fail/integration_suite__integration__general__const_string_to_int.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: type error
   ┌─ <input>:26:23
   │
26 │         const int y = $x;
   │                       ^^ cannot cast a string to an integer


